versioned_docs/version-2.7.5/Getting-started/Examples/configuration.mdx
---
id: configuration
title: Configuration example
description: Example of a configuration file
slug: /getting-started/examples/configuration
sidebar_position: 1
sidebar_label: ⚙️ Configuration
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

#

## Configuration files

:::tip
💡 This page follows the official [discordjs.guide <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://discordjs.guide/#before-you-begin).
:::

Once you [add your bot to a server <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://discordjs.guide/preparations/adding-your-bot-to-servers.html), the next step is to start coding and get it online! Let's start by creating a config file for your client token and a main file for your bot application.

As explained in the ["What is a token, anyway?" <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://discordjs.guide/preparations/setting-up-a-bot-application.html#what-is-a-token-anyway) section, your token is essentially your bot's password, and you should protect it as best as possible. This can be done through a `config.js` file or by using environment variables.

Open your application in the [Discord Developer Portal <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://discord.com/developers/applications) and go to the "Bot" page to copy your token

## Using `config.js`

Storing data in a `config.js` file is a common way of keeping your sensitive values safe. Create a `config.js` file in your project directory and paste in your token. You can access your token inside other files by using require().

<Tabs>
	<TabItem value="config.js" label="config.js" default>
    ```javascript showLineNumbers
    module.exports = {
	    token: "", // required
	    lastFmApiKey: "", // optional
	    nodes: [
            {
                host: "", // required
                port: 9999, // required
                password: "", // required
                secure: false, // optional
                retryAmount: 500, // optional
                retryDelay: 300000, // optional
                resumeStatus: true, // optional
                resumeTimeout: 300, // optional
            },
	    ],
    };
    ```
    </TabItem>
	<TabItem value="Usage" label="Usage" default>
    ```javascript  showLineNumbers
    const { token, lastFmApiKey, nodes } = require('./config.json');
    ```
    </TabItem>
</Tabs>

<br></br>

---

## Using dotenv

Another common approach is storing these values in a `.env` file. This spares you from always copying your token into the command line. Each line in a `.env` file should hold a `KEY=value` pair.

You can use the [`dotenv` package <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://www.npmjs.com/package/dotenv) for this. Once installed, require and use the package to load your .env file and attach the variables to process.env:

<Tabs>
	<TabItem value="npm" label="npm" default>
		```shell npm install dotenv ```
	</TabItem>
	<TabItem value="yarn" label="yarn" default>
		```shell yarn add dotenv ```
	</TabItem>
	<TabItem value="pnpm" label="pnpm" default>
		```shell pnpm add dotenv ```
	</TabItem>
	<TabItem value="bun" label="bun" default>
		```shell # dotenv is not necessary with Bun # Bun reads .env files automatically ```
	</TabItem>
</Tabs>

<br></br>

:::warning
⚠️ DOTENV DOES NOT NATIVELY SUPPORT ARRAYS, BUT YOU CAN STORE ARRAYS SUITABLE FOR NODES BY SERIALIZING THEM INTO A STRING (e.g., JSON).
:::

<Tabs>
	<TabItem value=".env" label=".env" default>
    ```env  showLineNumbers
    TOKEN=""
    LASTFM_API_KEY=""
    LAVALINK_NODES=[{"host":"","port":9999,"password":"","secure":false,"retryAmount":500,"retryDelay":300000,"resumeStatus":true,"resumeTimeout":300}]
    ```
    </TabItem>
    <TabItem value="Usage" label="Usage" default>
    ```javascript  showLineNumbers
    require("dotenv").config();

    const { TOKEN, LASTFM_API_KEY, LAVALINK_NODES } = process.env;

    // Parse LAVALINK_NODES JSON string
    const nodes = JSON.parse(LAVALINK_NODES || "[]");
    ```
    </TabItem>

</Tabs>

## Resulting code

If you want to compare your code to the final result after completing all the steps in this guide, you can review it on the GitHub repository [here <i className="fa-solid fa-arrow-up-right-from-square" style={{ fontSize: '0.8em'}}/>](https://github.com/Magmastream-NPM/magmastream_basics_bot/tree/25f070007c1819fc4cb5fa0b8c3939320119d8e2/src).
